--- a/style.css
+++ b/style.css
@@ -1,19 +1,7 @@
-/*
-SPACING SYSTEM (px)
-2 / 4 / 8 / 12 / 16 / 24 / 32 / 48 / 64 / 80 / 96 / 128
-
-FONT SIZE SYSTEM (px)
-10 / 12 / 14 / 16 / 18 / 20 / 24 / 30 / 36 / 44 / 52 / 62 / 74 / 86 / 98
-*/
-
-/* Main color: ##f08c00
-   grey color: #343a40 */
-
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  /* background-color: #fff4e6; */
 }
 
 /* ------------------------ */
@@ -96,7 +84,7 @@ h1 {
   line-height: 1.1;
   letter-spacing: -1px;
   margin-bottom: 32px;
-  /* text-shadow: 0 5px 5px rgba(0, 0, 0, 0.2); */
+
 }
 
 .header-text {
@@ -155,7 +143,7 @@ img {
 .testimonial-author {
   color: #d1b3a5;
 }
-/* CHAIRS */
+/* POTTERY */
 .pottery {
   box-shadow: 0 20px 30px 0 rgba(0, 0, 0, 0.07);
   border-radius: 12px;
